@@ -1416,8 +1416,8 @@ rescan_script <PATH>
 	Default: "/bin/rescan_script.sh"
 
 sample_list <STRING>
-	This is a list of sample-dirs. The list is not case-sensitive.
-	Default: "sample vobsample"
+	This is a comma-seperated list of sample-dirs. The list is not case-sensitive.
+	Default: "sample,vobsample"
 
 sample_script <PATH>
 	Enter the name of the script you wish to execute on sample uploads.
