@@ -184,6 +184,9 @@ v1.2.0  --> 1.2.x :
 		- Fix textual typo in glftpd.tcl
 		- Improve stats-gathering for dayup/wkup/monthup/allup
 		- Rework internal speed handling and calculation
+		- Fix allowed_genres and banned_genres (and any other list where items have a space)
+		  having wrong matches. This causes sample_list to be a comma-seperated list
+		  now, so update your zsconfig.h if you have that defined in there.
 
 v1.1.0a --> 1.2.0 :
 		- added option to make accept_script run prior to complete_script.
